syntax = "proto3";

package lock;

option go_package = "github.com/resonatehq/resonate/internal/app/subsystems/api/grpc/pb";

service Locks {
    rpc AcquireLock (AcquireLockRequest) returns (AcquireLockResponse) {}
    rpc ReleaseLock (ReleaseLockRequest) returns (ReleaseLockResponse) {}
    rpc HeartbeatLocks (HeartbeatLocksRequest) returns (HeartbeatLocksResponse) {}
}

message AcquireLockRequest {
    string resourceId = 1;
    string executionId = 2;
    string processId = 3;
    int64 ttl = 4;
    string requestId = 5;
}

message AcquireLockResponse {
    bool acquired = 1;
}

message ReleaseLockRequest {
    string resourceId = 1;
    string executionId = 2;
    string requestId = 3;
}

message ReleaseLockResponse {
    bool released = 1;
}

message HeartbeatLocksRequest {
    string processId = 1;
    string requestId = 2;
}

message HeartbeatLocksResponse {
    int32 locksAffected = 1;
}
